Working on layout

--- a/app/views/inbox_files/edit.html.haml
+++ b/app/views/inbox_files/edit.html.haml
@@ -1,8 +1,4 @@
 %header.subhead#overview
-  %h2 Edit Catalog
-  .subnav
-    %ul.nav.nav-pills
-      %li= link_to "Show", [:admin, @catalog]
-      %li= link_to "View All", admin_catalogs_path
+  %h2 Edit File
 
 = render 'form'
