--- a/app/views/labels/_form.html.haml
+++ b/app/views/labels/_form.html.haml
@@ -1,11 +1,9 @@
-= simple_form_for [@filter] do |f|
-  = display_actions f, filters_path
+= simple_form_for [@label] do |f|
+  = display_actions f, labels_path
   %hr.soften
   = display_errors f
 
-  .filters
+  .labels
     = f.input :name, :label => 'Name'
-    = f.input :text, :label => 'Text'
-    = f.input :from_date,:as => :string, :input_html => { :class => 'date_picker' }
-    = f.input :to_date,:as => :string, :input_html => { :class => 'date_picker' }
+    = f.input :description, :label => 'Description'
 
