--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -14,3 +14,5 @@
           = link_to 'Inbox', inbox_files_path
         %li
           = link_to 'Filters', filters_path
+        %li
+          = link_to 'Labels', labels_path
