--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,17 +14,15 @@
     - else
       .container
         = render 'layouts/navigation'
-    #leftcolumn{:style => "width:170px;margin:0;padding:0;margin-top:5px;float:left;"}
-      %h5.left
-        %span.left_h5
-          = yield(:filters)
-          - content_for :filters do
-            Filters
-    .container
-      - flash.each do |name, msg|
-        - klass = (name.to_s == 'error' || name.to_s == 'alert') ? 'alert fade in alert-error' : 'alert fade in alert-info'
-        = content_tag :div, "<a class='close' data-dismiss='alert' href='#'>&times;</a>#{msg}".html_safe, :class => klass
-      = yield
+    .container-fluid
+      .row-fluid
+        .span2
+          = render 'filters/index'
+        .span10
+          - flash.each do |name, msg|
+            - klass = (name.to_s == 'error' || name.to_s == 'alert') ? 'alert fade in alert-error' : 'alert fade in alert-info'
+            = content_tag :div, "<a class='close' data-dismiss='alert' href='#'>&times;</a>#{msg}".html_safe, :class => klass
+          = yield
       = yield(:javascripts)
 
 
