--- a/app/views/filters/show.html.haml
+++ b/app/views/filters/show.html.haml
@@ -19,5 +19,5 @@
   = display_show_item('Text', @filter.text)
   = display_show_item('From date', @filter.from_date)
   = display_show_item('To date', @filter.to_date)
-  = display_show_item('Created', @filter.created.to_s(:long_ordinal))
-  = display_show_item('Updated', @filter.updated.to_s(:long_ordinal))
+  = display_show_item('Created', @filter.created_at.to_s(:long_ordinal))
+  = display_show_item('Updated', @filter.updated_at.to_s(:long_ordinal))
