--- a/app/views/filters/_form.html.haml
+++ b/app/views/filters/_form.html.haml
@@ -8,6 +8,7 @@
     = f.input :text, :label => 'Text',:as => :string
     = f.input :from_date,:as => :date
     = f.input :to_date,:as => :date
-    = f.association :content_types, :collection => @content_types, :label => 'Type', :prompt => '-- Please select content type --', :input_html => {:class => 'span5'}
+    = f.association :content_types, :collection => @content_types, :label => 'Content Type', :prompt => '-- Please select content type --', :input_html => {:class => 'span5'}
+    = f.association :media_types, :collection => @media_types, :label => 'Media Type', :prompt => '-- Please select media type --', :input_html => {:class => 'span5'}
 
 
