--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,6 @@
       = content_for?(:title) ? yield(:title) : "Personal Library"
     %meta{"http-equiv"=>"Content-Type", :content=>"text/html; charset=utf-8"}/
     = stylesheet_link_tag 'user'
-    = javascript_include_tag 'user'
     = csrf_meta_tag
     = yield(:head)
   %body(data-spy="scroll" data-target=".subnav" data-offset="50" data-rendering="true")
@@ -16,13 +15,15 @@
         = render 'layouts/navigation'
     .container-fluid
       .row-fluid
-        .span2
-          = render 'filters/index'
+        - if current_user
+          .span2
+            = render 'filters/index'
         .span10
           - flash.each do |name, msg|
             - klass = (name.to_s == 'error' || name.to_s == 'alert') ? 'alert fade in alert-error' : 'alert fade in alert-info'
             = content_tag :div, "<a class='close' data-dismiss='alert' href='#'>&times;</a>#{msg}".html_safe, :class => klass
           = yield
       = yield(:javascripts)
+  = javascript_include_tag 'user'
 
 
