--- a/app/views/filters/_form.html.haml
+++ b/app/views/filters/_form.html.haml
@@ -11,5 +11,5 @@
     = f.association :content_types, :collection => @content_types, :label => 'Content Type', :prompt => '-- Please select content type --', :input_html => {:class => 'span5'}
     = f.association :media_types, :collection => @media_types, :label => 'Media Type', :prompt => '-- Please select media type --', :input_html => {:class => 'span5'}
     = f.association :languages, :collection => @languages, :label => 'Language', :prompt => '-- Please select language --', :input_html => {:class => 'span5'}
-
-
+    %input#selected_catalogs{:name => "selected_catalogs", :type => "hidden", :value => ""}
+    #catalogs
