--- a/app/views/filters/_form.html.haml
+++ b/app/views/filters/_form.html.haml
@@ -1,5 +1,5 @@
 = simple_form_for [@filter] do |f|
-  = display_actions f, @filter.id ? filter_url(@filter) :filters_url
+  = display_actions_filter_form f, @filter.id ? filter_url(@filter) :filters_url
   %hr.soften
   = display_errors f
 
@@ -13,3 +13,14 @@
     = f.association :languages, :collection => @languages, :label => 'Language', :prompt => '-- Please select language --', :input_html => {:class => 'span5'}
     %input#selected_catalogs{:name => "selected_catalogs", :type => "hidden", :value => ""}
     #catalogs
+
+
+:javascript
+  function get_selected_catalogs(button) {
+    var checked_ids = [];
+    $("#catalogs").jstree("get_checked",null,false).each(function(){
+      checked_ids.push(this.id);
+    });
+    document.getElementById('selected_catalogs').value = checked_ids.join(",");
+  }
+
