adding filters and labels association in files form

--- a/app/views/inbox_files/_form.html.haml
+++ b/app/views/inbox_files/_form.html.haml
@@ -10,5 +10,7 @@
       = f.input :description, :label => 'description' ,:as => :string
       = f.input :url
       = f.input :archived
+      = f.association :filters, :collection =>current_user.filters
+      = f.association :labels, :collection =>current_user.labels
   %hr.soften
   = display_actions f, inbox_files_url
