working sync from kmedia

--- a/app/views/inbox_files/index.html.haml
+++ b/app/views/inbox_files/index.html.haml
@@ -1,7 +1,7 @@
 %header.subhead#overview
 
 %section
-  = paginate @files
+  = paginate @inbox_files
 
   %table.table.table-striped.table-bordered.table-condensed
     %thead
@@ -11,14 +11,14 @@
         %th= 'Description'
         %th= 'Actions'
     %tbody
-      - @files.each do |file|
+      - @inbox_files.each do |inbox_file|
         %tr(class="#{cycle('odd', 'even')}")
-          %td= link_to file.name, file.url
-          %td= file.date
+          %td= link_to inbox_file.kmedia_file.name, inbox_file.kmedia_file.url
+          %td= inbox_file.kmedia_file.date
           %td.editable
-            %a{:id =>"description#{file.id}", "data-original-title" => "Enter description", "data-name"=>"description", "data-pk" => file.id, "data-type" => "text", "data-url" => description_inbox_file_url(file), :href => "#"}= file.description
-          %td= link_to 'Show', [file]
-          %td= link_to 'Edit', edit_inbox_file_path(file)
-          %td= button_to 'Archive', archive_inbox_file_path(file, :archived => true), :class => "btn btn-small", :method => :put
-          %td= link_to 'Destroy', inbox_file_path(file), :confirm => 'Are you sure?', :method => :delete, :class => 'btn-small btn-danger'
+            %a{:id =>"description#{inbox_file.id}", "data-original-title" => "Enter description", "data-name"=>"description", "data-pk" => inbox_file.id, "data-type" => "text", "data-url" => description_inbox_file_url(inbox_file), :href => "#"}= inbox_file.description
+          %td= link_to 'Show', [inbox_file]
+          %td= link_to 'Edit', edit_inbox_file_path(inbox_file)
+          %td= button_to 'Archive', archive_inbox_file_path(inbox_file, :archived => true), :class => "btn btn-small", :method => :put
+          %td= link_to 'Destroy', inbox_file_path(inbox_file), :confirm => 'Are you sure?', :method => :delete, :class => 'btn-small btn-danger'
 
