1) Added refresh button to fetch the new files for kmedia 2)the date picker changed to bootstrap datepicker

--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -81,3 +81,19 @@ hr.soften {
 .common_background {
 
 }
+
+.inline_field_wrapper {
+  display: inline-block;
+}
+
+.pagination {
+  text-align: center;
+  .pagination ul {
+    background: #fff;
+  }
+  ul > .disabled {
+    & > span, & > a, & > a:hover {
+      background-color: #F5F5F5;
+    }
+  }
+}
