--- a/app/views/inbox_files/index.html.haml
+++ b/app/views/inbox_files/index.html.haml
@@ -6,6 +6,7 @@
   %table.table.table-striped.table-bordered.table-condensed
     %thead
       %tr
+        %th= check_box_tag('check_all', '', false)
         %th= 'File Name'
         %th= 'Record Date'
         %th= 'Description'
@@ -13,6 +14,7 @@
     %tbody
       - @inbox_files.each do |inbox_file|
         %tr(class="#{cycle('odd', 'even')}")
+          %td.checkbox_column= check_box_tag "file_selection_#{inbox_file.id}", '', false
           %td= link_to inbox_file.kmedia_file.name, inbox_file.kmedia_file.url
           %td= inbox_file.kmedia_file.date
           %td.editable
@@ -21,4 +23,6 @@
           %td= link_to 'Edit', edit_inbox_file_path(inbox_file)
           %td= button_to 'Archive', archive_inbox_file_path(inbox_file, :archived => true), :class => "btn btn-small", :method => :put
           %td= link_to 'Destroy', inbox_file_path(inbox_file), :confirm => 'Are you sure?', :method => :delete, :class => 'btn-small btn-danger'
+    %input#selected_files{:name => "selected_files", :type => "hidden", :value => ""}
+
 
