--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -18,4 +18,5 @@
           = link_to 'Labels', labels_path
       .btn-group{style: 'float: right;' }
         = link_to "New Filter", new_filter_path, :class => "btn"
+        = link_to "New Label", new_label_path, :class => "btn"
         = link_to "Refresh", refresh_inbox_files_path, :class => "btn"
