--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -18,7 +18,7 @@
           = link_to 'Labels', labels_path
 
       .btn-group{style: 'float: right;' }
-        = link_to "Delete", delete_multiple_inbox_files_path, :confirm => 'Are you sure?', :class => "btn", :id => 'delete_btn', :method => :delete
+        = link_to "Delete", delete_multiple_inbox_files_path(:filter => @filter), :confirm => 'Are you sure?', :class => "btn", :id => 'delete_btn', :method => :delete
         = link_to "New Filter", new_filter_path, :class => "btn"
         = link_to "New Label", new_label_path, :class => "btn"
         = link_to "Refresh", refresh_inbox_files_path, :class => "btn"
