keeping the filter selected when deleting file

--- a/app/views/inbox_files/index.html.haml
+++ b/app/views/inbox_files/index.html.haml
@@ -19,10 +19,10 @@
           %td= inbox_file.kmedia_file.date
           %td.editable
             %a{:id =>"description#{inbox_file.id}", "data-original-title" => "Enter description", "data-name"=>"description", "data-pk" => inbox_file.id, "data-type" => "text", "data-url" => description_inbox_file_url(inbox_file), :href => "#"}= inbox_file.description
-          %td= link_to 'Show', [inbox_file]
-          %td= link_to 'Edit', edit_inbox_file_path(inbox_file)
-          %td= button_to 'Archive', archive_inbox_file_path(inbox_file, :archived => true), :class => "btn btn-small", :method => :put
-          %td= link_to 'Destroy', inbox_file_path(inbox_file), :confirm => 'Are you sure?', :method => :delete, :class => 'btn-small btn-danger'
-    %input#selected_files{:name => "selected_files", :type => "hidden", :value => ""}
+          %td= link_to 'Show', inbox_file_path(inbox_file, filter: @filter)
+          %td= link_to 'Edit', edit_inbox_file_path(inbox_file, filter: @filter)
+          %td= button_to 'Archive', archive_inbox_file_path(inbox_file, :archived => true, filter: @filter), :class => "btn btn-small", :method => :put
+          %td= link_to 'Destroy', inbox_file_path(inbox_file, filter: @filter), :confirm => 'Are you sure?', :method => :delete, :class => 'btn-small btn-danger'
+      %input#selected_files{:name => "selected_files", :type => "hidden", :value => ""}
 
 
