--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -97,3 +97,40 @@ hr.soften {
     }
   }
 }
+
+#btn_group{
+  float:right;
+  position:relative;
+  left:-50%;
+  text-align:left;
+  vertical-align: middle;
+}
+#btn_group ul{
+  list-style:none;
+  position:relative;
+  left:50%;
+}
+
+#btn_group input{
+  list-style:none;
+  position:relative;
+  vertical-align: bottom;
+  left:50%;
+}
+
+#btn_group li{float:left;position:relative;}/* ie needs position:relative here*/
+
+#btn_group a{
+  text-decoration:none;
+  margin:10px;
+  background:red;
+  float:left;
+  border:2px outset blue;
+  color:#fff;
+  padding:2px 5px;
+  text-align:center;
+  white-space:nowrap;
+
+}
+#btn_group a:hover{ border:2px inset blue;color:red;background:#f2f2f2;}
+#content{overflow:hidden}/* hide horizontal scrollbar*/
