--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -8,17 +8,23 @@
       = link_to "Personal Library <br/>#{user}".html_safe, '#', :class => 'brand'
       = link_to_if current_user, 'Logout', destroy_user_session_path, :class => 'brand logout', :style => 'float: right;'
 
-    - if current_user
-      %ul.nav.nav-tabs
-        %li.active
-          = link_to 'Inbox', inbox_files_path
-        %li
-          = link_to 'Filters', filters_path
-        %li
-          = link_to 'Labels', labels_path
+  - if current_user
+    %ul.nav.nav-tabs
+      %li.active
+        = link_to 'Inbox', inbox_files_path
+      %li
+        = link_to 'Filters', filters_path
+      %li
+        = link_to 'Labels', labels_path
 
-      .btn-group{style: 'float: right;' }
-        = link_to "Delete", delete_multiple_inbox_files_path(:filter => @filter), :confirm => 'Are you sure?', :class => "btn", :id => 'delete_btn', :method => :delete
-        = link_to "New Filter", new_filter_path, :class => "btn"
-        = link_to "New Label", new_label_path, :class => "btn"
-        = link_to "Refresh", refresh_inbox_files_path, :class => "btn"
+
+    .btn-group{style: 'float: right;' }
+      = link_to "New Filter", new_filter_path, :class => "btn"
+      = link_to "New Label", new_label_path, :class => "btn"
+      = link_to "Refresh", refresh_inbox_files_path, :class => "btn"
+    .btn-group{:id => 'btn_group'}
+      = form_tag delete_multiple_inbox_files_path(:filter => @filter), :method => :delete, :onsubmit => "return true;" do
+        = image_submit_tag ("/assets/trash.gif"), :id => 'submit_delete', :confirm => 'Are you sure?'
+        %input#selected_files{:name => "selected_files", :type => "hidden", :value => ""}
+
+
