adding update buttons in the bottom of the form

--- a/app/views/labels/_form.html.haml
+++ b/app/views/labels/_form.html.haml
@@ -7,3 +7,5 @@
     = f.input :name, :label => 'Name'
     = f.input :description, :label => 'Description'
 
+  %hr.soften
+  = display_actions f, labels_path
