--- a/app/views/filters/_form.html.haml
+++ b/app/views/filters/_form.html.haml
@@ -13,7 +13,8 @@
     = f.association :languages, :collection => @languages, :label => 'Language', :prompt => '-- Please select language --', :input_html => {:class => 'span5'}
     %input#selected_catalogs{:name => "selected_catalogs", :type => "hidden", :value => ""}
     #catalogs
-
+  %hr.soften
+  = display_actions_filter_form f, @filter.id ? filter_url(@filter) :filters_url
 
 :javascript
   function get_selected_catalogs(button) {
