--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -6,7 +6,8 @@
       - else
         - user = ''
       = link_to "Personal Library <br/>#{user}".html_safe, '#', :class => 'brand'
-      = link_to_if current_user, 'Logout', destroy_user_session_path, :class => 'brand logout', :style => 'float: right;'
+      - if current_user
+        = link_to 'Logout', destroy_user_session_path, :class => 'brand logout', :style => 'float: right;'
 
   - if current_user
     %ul.nav.nav-tabs
