--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -24,8 +24,11 @@
       = link_to "New Label", new_label_path, :class => "btn"
       = link_to "Refresh", refresh_inbox_files_path, :class => "btn"
     .btn-group{:id => 'btn_group'}
-      = form_tag delete_multiple_inbox_files_path(:filter => @filter), :method => :delete, :onsubmit => "return true;" do
-        = image_submit_tag ("/assets/trash.gif"), :id => 'submit_delete', :confirm => 'Are you sure?'
-        %input#selected_files{:name => "selected_files", :type => "hidden", :value => ""}
+      = form_tag delete_multiple_inbox_files_path(:filter => @filter), :method => :delete, :onsubmit => "return true;" , style: "display: inline;" do
+        = image_submit_tag ("/assets/trash.gif"), :id => 'submit_delete', :confirm => 'Are you sure?', class: "btn"
+        %input#selected_files_for_delete{:name => "selected_files", :type => "hidden", :value => ""}
+      = form_tag archive_multiple_inbox_files_path(:filter => @filter), :method => :post, :onsubmit => "return true;", style: "display: inline;" do
+        = image_submit_tag ("/assets/archive_16.png"), :id => 'submit_archive', class: "btn"
+        %input#selected_files_for_archive{:name => "selected_files", :type => "hidden", :value => ""}
 
 
