fixing refresh button

--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -134,3 +134,8 @@ hr.soften {
 }
 #btn_group a:hover{ border:2px inset blue;color:red;background:#f2f2f2;}
 #content{overflow:hidden}/* hide horizontal scrollbar*/
+
+#sign_in_link a{
+  text-align:left;
+  font-size: 24px;
+}
