--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,18 @@
     = stylesheet_link_tag 'user'
     = csrf_meta_tag
     = yield(:head)
+
+    :javascript
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-11335066-15', 'kbb1.com');
+      ga('send', 'pageview', {
+        'page': '#{request.path}'
+    });
+
   %body(data-spy="scroll" data-target=".subnav" data-offset="50" data-rendering="true")
     - if current_user
       = render 'layouts/navigation'
