--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -25,10 +25,10 @@
       = link_to "Refresh", refresh_inbox_files_path(:filter => @filter), :class => "btn"
     .btn-group{:id => 'btn_group'}
       = form_tag delete_multiple_inbox_files_path(:filter => @filter), :method => :delete, :onsubmit => "return true;" , style: "display: inline;" do
-        = image_submit_tag ("/assets/trash.gif"), :id => 'submit_delete', :confirm => 'Are you sure?', class: "btn"
+        = image_submit_tag ("/assets/trash.gif"), :id => 'submit_delete', :confirm => 'Are you sure?', class: "btn", title: "Delete"
         %input#selected_files_for_delete{:name => "selected_files", :type => "hidden", :value => ""}
       = form_tag archive_multiple_inbox_files_path(:filter => @filter), :method => :post, :onsubmit => "return true;", style: "display: inline;" do
-        = image_submit_tag ("/assets/archive_16.png"), :id => 'submit_archive', class: "btn"
+        = image_submit_tag ("/assets/archive_16.png"), :id => 'submit_archive', class: "btn", title: "Archive"
         %input#selected_files_for_archive{:name => "selected_files", :type => "hidden", :value => ""}
 
 
