--- a/app/views/inbox_files/_form.html.haml
+++ b/app/views/inbox_files/_form.html.haml
@@ -7,5 +7,7 @@
     - if can?(:edit, @inbox_file)
       = f.input :description, :label => 'description' ,:as => :string
       = f.input :archived
+      = f.association :labels, :collection => @labels_for_menu, :label => 'Labels',  :input_html => {:class => 'span5'}
+
   %hr.soften
   = display_actions f, inbox_files_url
