--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -26,17 +26,17 @@
       %ul.dropdown-menu
         -@labels_for_menu.each do |label|
           %li.add_to_label
-            = link_to label[:name].humanize, "#", url: add_label_multiple_inbox_files_path(filter:  @filter, add_to_label: label[:id]), id: "add_label", label: label[:name]
+            = link_to label[:name].humanize, "#", url: add_label_multiple_inbox_files_path(add_to_label: label[:id]), id: "add_label", label: label[:name], label_id: label[:id]
 
       = link_to "New Filter", new_filter_path, :class => "btn"
       = link_to "New Label", new_label_path, :class => "btn"
-      = link_to "Refresh", refresh_inbox_files_path(:filter => @filter), :class => "btn"
+      = link_to "Refresh", refresh_inbox_files_path, :class => "btn"
 
     .btn-group{:id => 'btn_group'}
-      = form_tag delete_multiple_inbox_files_path(:filter => @filter), :method => :delete, :onsubmit => "return true;" , style: "display: inline;" do
+      = form_tag delete_multiple_inbox_files_path, :method => :delete, :onsubmit => "return true;" , style: "display: inline;" do
         = image_submit_tag ("/assets/trash.gif"), :id => 'submit_delete', :confirm => 'Are you sure?', class: "btn", title: "Delete"
         %input#selected_files_for_delete{:name => "selected_files", :type => "hidden", :value => ""}
-      = form_tag archive_multiple_inbox_files_path(:filter => @filter), :method => :post, :onsubmit => "return true;", style: "display: inline;" do
+      = form_tag archive_multiple_inbox_files_path, :method => :post, :onsubmit => "return true;", style: "display: inline;" do
         = image_submit_tag ("/assets/archive_16.png"), :id => 'submit_archive', class: "btn", title: "Archive"
         %input#selected_files_for_archive{:name => "selected_files", :type => "hidden", :value => ""}
 
