--- a/app/views/filters/_index.html.haml
+++ b/app/views/filters/_index.html.haml
@@ -1,9 +1,9 @@
 .well
   %ul.nav.nav-list
     %li.nav-header Filters
-    %li= do_nav_link('Inbox', inbox_files_path, @filter.nil? && @label.nil?)
+    %li= do_nav_link('Inbox', inbox_files_path(inbox: true), cookies[:filter].nil? && cookies[:label].nil?)
     - @filters_for_menu.each do |filter|
-      %li= nav_link(filter.name, inbox_files_path(:filter => filter), filter, @filter)
+      %li= nav_link(filter.name, inbox_files_path(filter: filter), filter, cookies[:filter])
     %li.nav-header Labels
     - @labels_for_menu.each do |label|
-      %li= nav_link(label.name, inbox_files_path(:label => label), label, @label)
+      %li= nav_link(label.name, inbox_files_path(label: label), label, cookies[:label])
