--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -25,8 +25,9 @@
         %span.caret
       %ul.dropdown-menu
         -@labels_for_menu.each do |label|
-          %li.add_to_label
-            = link_to label[:name].humanize, "#", url: add_label_multiple_inbox_files_path(add_to_label: label[:id]), id: "add_label", label: label[:name], label_id: label[:id]
+          -unless cookies[:label].to_i==label[:id]
+            %li.add_to_label
+              = link_to label[:name].humanize, "#", url: add_label_multiple_inbox_files_path(add_to_label: label[:id]), id: "add_label", label: label[:name], label_id: label[:id]
 
       = link_to "New Filter", new_filter_path, :class => "btn"
       = link_to "New Label", new_label_path, :class => "btn"
