--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -74,6 +74,7 @@ hr.soften {
   border-radius: 10px 10px 10px 10px;
   box-shadow: 0 0 3px #666666;
 }
+
 #google_ads_div_Kabbalah_media_ad_wrapper {
   margin: 5px 0 0;
 }
@@ -98,49 +99,65 @@ hr.soften {
   }
 }
 
-#btn_group{
-  float:right;
-  position:relative;
-  left:-40%;
-  text-align:left;
+#btn_group {
+  float: right;
+  position: relative;
+  left: -40%;
+  text-align: left;
   vertical-align: middle;
 }
-#btn_group ul{
-  list-style:none;
-  position:relative;
-  left:50%;
+
+#btn_group ul {
+  list-style: none;
+  position: relative;
+  left: 50%;
 }
 
-#btn_group input{
-  list-style:none;
-  position:relative;
+#btn_group input {
+  list-style: none;
+  position: relative;
   vertical-align: bottom;
-  left:50%;
+  left: 50%;
 }
 
-#btn_group li{float:left;position:relative;}/* ie needs position:relative here*/
+#btn_group li {
+  float: left;
+  position: relative;
+}
 
-#btn_group a{
-  text-decoration:none;
-  margin:10px;
-  background:red;
-  float:left;
-  border:2px outset blue;
-  color:#fff;
-  padding:2px 5px;
-  text-align:center;
-  white-space:nowrap;
+/* ie needs position:relative here*/
+
+#btn_group a {
+  text-decoration: none;
+  margin: 10px;
+  background: red;
+  float: left;
+  border: 2px outset blue;
+  color: #fff;
+  padding: 2px 5px;
+  text-align: center;
+  white-space: nowrap;
 
 }
-#btn_group a:hover{ border:2px inset blue;color:red;background:#f2f2f2;}
-#content{overflow:hidden}/* hide horizontal scrollbar*/
 
-#sign_in_link a{
-  text-align:left;
+#btn_group a:hover {
+  border: 2px inset blue;
+  color: red;
+  background: #f2f2f2;
+}
+
+#content {
+  overflow: hidden
+}
+
+/* hide horizontal scrollbar*/
+
+#sign_in_link a {
+  text-align: left;
   font-size: 24px;
 }
 
-span.tab{
+span.tab {
   padding: 0 80px; /* Or desired space*/
 }
 
@@ -148,7 +165,6 @@ span.tab{
 //  opacity: 1;
 //  color:#CCC;
 //}
-
 
 //.modal-backdrop.fade {
 //  background-color: white;
@@ -160,9 +176,8 @@ span.tab{
 //  opacity: 0.5;
 //}
 
-
 .modal-backdrop.fade.in {
-  filter: alpha(opacity=50);
+  filter: alpha(opacity = 50);
   -khtml-opacity: 0.5;
   -moz-opacity: 0.5;
   opacity: 0.5;
@@ -173,16 +188,16 @@ span.tab{
 }
 
 .close.label-delete {
-   float: none;
-   color: #8b0000;
-   opacity: 1;
-   padding-left: 3px;
+  float: none;
+  color: #8b0000;
+  opacity: 1;
+  padding-left: 3px;
   font-size: 16px;
- }
+}
 
 .label {
   display: inline-block;
-  padding: 1px 4px  0;
+  padding: 1px 4px 0;
   background-color: #CCC;
   color: #444;
   font-weight: normal;
