--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -29,15 +29,18 @@
             %li.add_to_label
               = link_to label[:name].humanize, "#", url: add_label_multiple_inbox_files_path(add_to_label: label[:id]), id: "add_label", label: label[:name], label_id: label[:id]
 
-      = link_to "New Filter", new_filter_path, :class => "btn"
-      = link_to "New Label", new_label_path, :class => "btn"
-      = link_to "Refresh", refresh_inbox_files_path, :class => "btn"
+      = link_to "New Filter", new_filter_path, class: "btn"
+      = link_to "New Label", new_label_path, class: "btn"
+      = link_to "Refresh", refresh_inbox_files_path, class: "btn"
 
     .btn-group{:id => 'btn_group'}
       = form_tag delete_multiple_inbox_files_path, :method => :delete, :onsubmit => "return true;" , style: "display: inline;" do
-        = image_submit_tag ("/assets/trash.gif"), :id => 'submit_delete', :confirm => 'Are you sure?', class: "btn", title: "Delete"
-        %input#selected_files_for_delete{:name => "selected_files", :type => "hidden", :value => ""}
+        = image_submit_tag ("/assets/trash.gif"), :id => 'submit_delete', :confirm => 'Are you sure?', class: "btn my-btn", title: "Delete"
+        %input#selected_files_for_delete{:name => "selected_files", :type => "hidden", :value => "", class: "files-input"}
       = form_tag archive_multiple_inbox_files_path, :method => :post, :onsubmit => "return true;", style: "display: inline;" do
         = image_submit_tag ("/assets/archive_16.png"), :id => 'submit_archive', class: "btn", title: "Archive"
-        %input#selected_files_for_archive{:name => "selected_files", :type => "hidden", :value => ""}
+        %input#selected_files_for_archive{:name => "selected_files", :type => "hidden", :value => "", class: "files-input"}
+      = form_tag download_multiple_inbox_files_path, :method => :get, :onsubmit => "return true;", style: "display: inline;" do
+        = image_submit_tag ("/assets/Download.png"), :id => 'submit_download', class: "btn", title: "Download"
+        %input#selected_files_for_download{:name => "selected_files", :type => "hidden", :value => "", class: "files-input"}
 
