Download zips UI added

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -17,6 +17,8 @@
         = link_to 'Filters', filters_path
       %li
         = link_to 'Labels', labels_path
+      %li
+        = link_to 'Zips', download_tasks_path
 
 
     .btn-group{style: 'float: right;' }
